[package]
name = "esp-log-wifi-heap"
version = "0.1.0"
edition = "2021"

[dependencies]
log                 = { version = "0.4.21" }
smart-leds          = { version = "0.4.0" }
static_cell         = { version = "2.0.0", features = ["nightly"] }
critical-section    = { version = "1.1.2" }
infrared            = { version = "0.14.2" }
vl53l0x             = { version = "0.3.1" }

esp-hal             = { version = "0.16.1", features = ["esp32c6", "log", "embassy", "embassy-time-timg0", "embassy-executor-thread", "interrupt-preemption"] }
esp-backtrace       = { version = "0.11.0", features = ["esp32c6", "exception-handler", "panic-handler", "println"] }
esp-println         = { version = "0.9.0", features = ["esp32c6", "log"] }
esp-hal-smartled    = { version = "0.9.0", features = ["esp32c6"] }
esp-wifi            = { version = "0.4.0", features = ["esp32c6", "wifi-default", "embassy-net"] }
esp-alloc           = { version = "0.3.0" }

embedded-io-async   = { version = "0.6.1" }
embedded-hal-async  = { version = "1.0.0" }

embassy-executor    = { version = "0.5.0", features = ["nightly"] }
embassy-time        = { version = "0.3.0", features = ["generic-queue-8"] }
embassy-net         = { version = "0.4.0", features = ["medium-ip", "proto-ipv4", "udp", "tcp", "dhcpv4"] }
embassy-futures     = { version = "0.1.1" }

[profile.release]
debug = true
lto = true
opt-level = "s"
incremental = true
codegen-units = 1

[profile.dev.package.esp-wifi]
opt-level = 3

[profile.release.package.esp-wifi]
opt-level = 3
